# p2ptransfer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  client.cpp  python_bigfile_generator.py  run.sh  run_client.sh  run_server.sh  run_tests.sh  server.cpp  traffic_generator.py  windows_build.sh
client/: CMakeLists.txt  argument_data.hpp  argument_parser.cpp  argument_parser.hpp  client_manager.cpp  client_manager.hpp  connection_handler.cpp  connection_handler.hpp  main.cpp  main_graphics.cpp  network_manager.cpp  network_manager.hpp  request_serializer.cpp  request_serializer.hpp
client/presenter/: CMakeLists.txt  client_presenter.cpp  client_presenter.hpp  presenter.cpp  presenter.hpp
client/tests/: CMakeLists.txt  main.cpp  test_presenter.cpp  view_mock.hpp
client/view/: CMakeLists.txt  client_view.hpp  client_view_callback.hpp  view.hpp  view_callback.hpp  view_gui.cpp  view_gui.hpp  view_gui.ui
general/: CMakeLists.txt  address.hpp  callback.hpp  request_deserializer.cpp  request_deserializer.hpp  request_serializer.hpp  send_request_data.hpp  string_view_methods.hpp
general/address_gatherer/: address_gatherer.hpp  address_gatherer_builder.hpp  address_gatherer_impl.cpp  address_gatherer_impl.hpp  address_gatherer_impl_builder.hpp  gather_address_callback.hpp
general/headers/: address.hpp  callback.hpp  common_types.hpp  filesize_formatter.hpp  gtest_headers.hpp  logger.hpp  request_header_names.hpp  request_structures.hpp  send_request_data.hpp  setupable.hpp  stdlib.hpp  stoppable.hpp
general/presenter/: connection_status_callback.hpp  file_transfer_callback.hpp  presenter.hpp  remote_interaction_callback.hpp
general/serializer/: request_deserializer.cpp  request_deserializer.hpp  request_serializer.cpp  request_serializer.hpp  string_view_methods.cpp  string_view_methods.hpp
general/signal_handler/: signal_handler.cpp  signal_handler.hpp
general/socket_manager/: socket_manager.hpp  socket_manager_builder.hpp  socket_manager_impl.hpp  socket_manager_impl_builder.hpp  socket_manager_impl_factory.hpp
general/string_view/: string_view_methods.cpp
general/tests/: CMakeLists.txt  address_gatherer_callback_mock.hpp  address_gatherer_mock.hpp  gather_address_callback_mock.hpp  remote_interaction_callback_mock.hpp  socket_manager_mock.hpp  socket_manager_mock_builder.hpp  test_address_gatherer.cpp  test_request_deserializer.cpp  test_request_serializer.cpp  test_socket_manager.cpp  test_thread_wrapper.cpp  thread_wrapper_mock.hpp
general/thread_wrapper/: thread_wrapper.hpp  thread_wrapper_impl.cpp  thread_wrapper_impl.hpp
general/view/: view.hpp  view_callback.hpp
headers/: CMakeLists.txt  a.cpp  address.hpp  callback.hpp  common_types.hpp  filesize_formatter.hpp  gtest_headers.hpp  header_deserializer.cpp  header_deserializer.hpp  logger.hpp  network_headers.hpp  port.hpp  qt_headers.hpp  request_deserializer.cpp  request_deserializer.hpp  request_header_names.hpp  request_serializer.cpp  request_serializer.hpp  request_structures.hpp  stdlib.hpp  string_view_methods.hpp
headers/tests/: CMakeLists.txt  test_request_deserializer.cpp  test_request_serializer.cpp
server/: CMakeLists.txt  address_gatherer.cpp  address_gatherer.hpp  argument_data.hpp  argument_parser.cpp  argument_parser.hpp  connection_handler.cpp  connection_handler.hpp  connection_status_callback.hpp  gui_view.cpp  gui_view.hpp  main.cpp  main_cli.cpp  main_graphics.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  manager.cpp  manager.hpp  model_address_gather.hpp  model_callback.hpp  model_callback_dependent.hpp  model_network_manager.hpp  network_headers.hpp  network_manager.cpp  network_manager.hpp  presenter.cpp  presenter.hpp  presenter_builder.cpp  presenter_builder.hpp  presenter_dependent.hpp  send_request_data.hpp  server_manager.cpp  server_manager.hpp  view.hpp  view_callback.hpp  view_callback_dependent.hpp
server/application/: application.hpp  cli_application.hpp  gui_application.hpp
server/gui/: CMakeLists.txt  gui_presenter.cpp  gui_presenter.hpp  mainwindow.hpp  ui_callback.hpp
server/gui_view/: CMakeLists.txt  gui_presenter.cpp  gui_presenter.hpp  gui_presenter_builder.hpp  gui_view.cpp  gui_view.hpp  i_address_gatherer.hpp  listener.hpp  mainwindow.cpp  mainwindow.hpp  presenter.hpp  view_callback.hpp  view_callback_dependent.hpp
server/model/: CMakeLists.txt  address_gatherer.cpp  address_gatherer.hpp  address_gatherer_impl.cpp  address_gatherer_impl.hpp  connection_establisher.cpp  connection_establisher.hpp  connection_establisher_impl.cpp  connection_establisher_impl.hpp  connection_handler.cpp  connection_handler.hpp  connection_status_callback.hpp  file_processor.cpp  file_processor.hpp  file_processor_builder.hpp  file_processor_impl.cpp  file_processor_impl.hpp  file_processor_impl_builder.hpp  file_transfer_callback.hpp  gather_address_callback.hpp  listener.hpp  listener_builder.hpp  listener_impl.cpp  listener_impl.hpp  listener_impl_builder.hpp  model_builder.hpp  model_callback.hpp  model_factory.hpp  model_factory_impl.cpp  model_factory_impl.hpp  model_impl_factory.cpp  model_impl_factory.hpp  network_manager.cpp  network_manager.hpp  remote_interaction_callback.hpp  socket_manager.cpp  socket_manager.hpp  socket_manager_impl.cpp  socket_manager_impl.hpp  socket_manager_impl_factory.hpp
server/presenter/: CMakeLists.txt  address_gatherer.hpp  argument_parser.hpp  connection_status_callback.hpp  file_transfer_callback.hpp  gather_address_callback.hpp  general_presenter.cpp  general_presenter.hpp  general_presenter_callback.hpp  listener.hpp  listener_callback.hpp  listener_presenter.cpp  listener_presenter.hpp  network_status_callback.hpp  presenter.hpp  presenter_impl.cpp  presenter_impl.hpp  remote_interaction_callback.hpp  server_presenter_impl.cpp  server_presenter_impl.hpp  view.hpp  view_callback.hpp
server/tests/: CMakeLists.txt  address_gatherer_mock.hpp  address_gatherer_mock_builder.hpp  connection_establisher_mock.hpp  file_processor_mock.hpp  (+32 more)
src/: CMakeLists.txt  \  main_cli.cpp  main_graphics.cpp  pch.cmake
(+219 files in other folders)
